@@ -118,7 +118,8 @@ class TextPassDumper extends BackupDumper {
 
 		# Notice messages will foul up your XML output even if they're
 		# relatively harmless.
-//		ini_set( 'display_errors', false );
+		if( ini_get( 'display_errors' ) )
+			ini_set( 'display_errors', 'stderr' );
 
 		$this->initProgress( $this->history );
 
